# kazu-pipeline

./: Oncology test for parsing Lata.json  README.md  converted (1).ttl  pyproject.toml
__MACOSX/: ._dmaster copy
__MACOSX/dmaster copy/: ._README.md
backend/: .env  server.py
backend/ontologies/: combined_ontology.ttl
backend/scripts/: README.md  grep_disease_ttl.py
backend/tests/: test_kazu_ontology_converter.py  test_ontology.py
dmaster copy/: .coverage  .gitignore  README.md  demo_notebook_guide.py  requirements.txt
dmaster copy/example_input/: crohns_disease_PL  disease_cohort_pubmed_search_demo
dmaster copy/output/: combined_cohorts.ttl
dmaster copy/scripts/: __init__.py  combine_ontologies.py  manage_domain_modules.py  test_phenotype_migration.py  update_graphdb.sh  validate_ontology.py  visualize_ontology.py
dmaster copy/tests/: test_modularity_validation.py  test_ontology_validation.py  test_ttl_syntax.py
example_input/: IgANephropathy.txt  crohns_disease_output.txt
example_input/cohortDefinitionOutputs/: cohort_definition_12397.json
frontend/: .env  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
ontologies/: combined_ontology.ttl  main_ontology.ttl
ontologies/backups/: core_base.json
ontologies/commercial/: commercial_core.ttl
ontologies/metadata/: core_base.json  metadata_core.ttl
ontologies/pathogenesis/: pathogenesis_core.ttl
ontologies/prov/: prov_core.ttl
scripts/: query_deprecated_terms.py  validate_combined_ontology.py  validate_severitylevel.py
tests/: test_unified_parser.py
(+82 files in other folders)
